objects/project_cloud__Stakeholder_Responsibility__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>project_cloud__Stakeholder_Activity__c</referenceTo>
        <relationshipLabel>Stakeholder Responsibilities</relationshipLabel>
        <relationshipName>Stakeholder_Responsibilities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Responsibility__c</fullName>
        <description>This field will allow a Stakeholder to be assigned to multiple responsibilities for an activity.</description>
        <inlineHelpText>RACI is an acronym derived from the four key responsibilities most typically used in Stakeholder management, select one or more from the following for matching Stakeholders &amp; Activities: R = Responsible, A = Accountable, C = Consulted, I = Informed</inlineHelpText>
        <label>Responsibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Stakeholder__c</fullName>
        <label>Stakeholder</label>
        <referenceTo>project_cloud__Stakeholder_Contact__c</referenceTo>
        <relationshipLabel>Stakeholder Responsibilities</relationshipLabel>
        <relationshipName>Stakeholder_Responsibilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stakeholder Responsibility</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Stakeholder Responsibility Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Responsibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>